Deduplicate multiple applets asking to use the same note file

This also trashes notes instead of deleting them, which
makes them recoverable.

BUG:508572
BUG:453673

Apply 1 suggestion(s) to 1 file(s)

Co-authored-by: Nate Graham <nate@kde.org>