applets/notes/package/contents/ui/main.qml
@@ -45,7 +45,7 @@ PlasmoidItem {
     readonly property bool compactInPanel: inPanel && !!compactRepresentationItem?.visible
 
     // note is of type Note
-    property QtObject note: noteManager.loadNote(Plasmoid.configuration.noteId);
+    property QtObject note: noteManager.loadNote(Plasmoid.configuration.noteId, Plasmoid.id);
 
     // define colors used for icons in ToolButtons and for text in TextArea.
     // this is deliberately _NOT_ the theme color as we are over a known bright background!
